Tried adding the fighting element. didn't go so well but I need to check the code more closely

--- a/index.html
+++ b/index.html
@@ -23,7 +23,20 @@
 <p > You have chosen chespin while your rival has chosen fennikin. You now have to fight your rival in a 
     pokemon battle.
 </p>
-<button> Fight rival</button>
+<button>Fight rival</button>
+
+</section>
+<button id="fighttest" onclick="myFight()">attack</button>
+<h3><a id="hpfifth">15</a></h3>
+
+<section id="fight/runaway">
+    <button>
+        Fight the grunt
+    </button>
+    <button>
+        Run away from the grunt
+    </button>
+    
 </section>
 </body>
 </html>
