Made it so the input disappears when the number reaches zero

--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
 <p > You have chosen chespin while your rival has chosen fennikin. You now have to fight your rival in a 
     pokemon battle.
 </p>
-<button>Fight rival</button>
+<button onclick="timer()">Fight rival</button>
 
 </section>
-<button id="fighttest" onclick="myFight()">attack</button>
-<h3><input id="hpfifth">1</input></h3>
+
 
 <section id="fight/runaway">
     <button>
