Tried to fix the timer but it didn't work. Added elements to js that didn't work at all ot made it worse.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 <p > You have chosen chespin while your rival has chosen fennikin. You now have to fight your rival in a 
     pokemon battle.
 </p>
-<button id="safeTimerDisplay"  onclick="reveal(), timer()">Fight rival</button>
-
+<button   onclick="reveal(), timer()">Fight rival</button>
 </section>
+<button id="safeTimerDisplay" >time</button>
 <p></p>
 
 <section id="fight/runaway">
