Fixed timer problem, But will need to fix it not disappearing when hp = 0 and making the lose text also disappear

--- a/index.html
+++ b/index.html
@@ -32,26 +32,23 @@
     pokemon battle.
 </p>
 <button   onclick="reveal(), timer()">Fight rival</button>
+
 </section>
-<button id="safeTimerDisplay" >time</button>
+
 <p></p>
 
 <section id="fight/runaway">
-    <button>
-        Fight the grunt
-    </button>
-    <button>
-        Run away from the grunt
-    </button>
+   
 </section>
 <section id="first-battle">
     <form>
+        <button id="safeTimerDisplay" >Time</button>
         <input type="text" id="number" value="15"/>
         <input type="button" onclick="attack()" value="Attack" />
      </form>
 </section>
 <p id="nay"> You won your rival fight and give yourself a cheer. You then dicide to move on in your journey</p>
-<p id="yan"> You lost the battle and lay on tyhe floor in defeat</p>
-<button onclick="retry()">Try again?</button>
+<p id="yan"> You lost the battle and lay on the floor in defeat</p>
+<button id="retry"onclick="retry()">Try again?</button>
 </body>
 </html>
