Almost finished the first grunt fight and will need to complete the after math

--- a/index.html
+++ b/index.html
@@ -102,13 +102,14 @@
     </section>
 
     <section id="second-battle">
-        <button id="safeTimerDisplaytwo" value="30">Time 00:30</button>
+        <button id="safeTimerDisplaytwo" >Time 00:30</button>
         <input type="text" id="numbertwo" value="20" />
         <input type="button" onclick="attack2()" value="Attack" />
     </section>
     
-        <p id="won"> You won the fight agains the Team Flare grunt!</p>
-        <p id="lost"> You lost the battle and head back to your room to heal your Pokemon.</p>
+        <p id="won"> You won the fight agains the Team Flare grunt! As you celebrate the deafeted grunt has something to say to you <br> <br> <button> hear him out</button></p>
+        <p id="lost"> You lost the battle and head back to your room to heal your Pokemon. <br> <br> <button onclick="retry2()">heal and try again</button>
+        </p>
     </section>
 
     <!--Join Team Flare Pathway-->
