Worked a little on the grunt encounter but nothing much.

--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
     <section id="grunt_battle">
         <section id='badyfight'>
         <p id="badytext">After a fight with your rival, you encounter a Team Flare grunt. The Team Flare grunt threatens
-            to take your
-            Pokemon.
+            to take your Pokemon.
         </p>
         <button id="fight_grunt" onclick="reveal2(), timer2()">Fight Grunt</button>
     </section>
@@ -107,19 +106,19 @@
         <input type="button" onclick="attack2()" value="Attack" />
     </section>
     
-        <p id="won"> You won the fight agains the Team Flare grunt! As you celebrate the deafeted grunt has something to say to you <br> <br> <button> hear him out</button></p>
+        <p id="won"> You won the fight agains the Team Flare grunt! As you celebrate the deafeted grunt has something to say to you <br> <br> <button onclick="letHimCook()"> hear him out</button></p>
         <p id="lost"> You lost the battle and head back to your room to heal your Pokemon. <br> <br> <button onclick="retry2()">heal and try again</button>
         </p>
     </section>
 
     <!--Join Team Flare Pathway-->
     <section id="join_flare">
-        <p>Team Flare has asked you to join them in their goal in taking over Kalos!</p>
+        <p> The grunt admires your strength and how easy it was to defeat him so the Team Flare grunt has asked you to join them and help complete their goal in taking over Kalos!</p>
         <button id="join_flare">Join Team Flare</button>
         <button id="refuse_flare">Refuse</button>
 
 
-        <p>The grunt takes you to Team Flare's hideout.</p>
+        <p>You decided to join Team Flare and the grunt takes you to Team Flare's hideout.</p>
         <button id="follow_grunt">Follow Team Flare Grunt</button>
 
         <p>The Team Flare grunt takes you to their base for training. You are informed your next mission is to steal
