Hid text within functions

--- a/index.html
+++ b/index.html
@@ -143,14 +143,14 @@
             tries to stop you.</p>
         <button id="battle_prof">Battle<button>
             <!--This will show up after winning-->
-                <p id="win_battle">You win and your rival has no more Pokemon left to fight. Team Flare's goal is
+                <p id="evil_end">You win and your rival has no more Pokemon left to fight. Team Flare's goal is
                     complete and Kalos is rebuilt in their image.</p>
 
     </section>
 
     <!--Against Team Flare Pathway-->
     <section id="refuse_flare">
-        <p id="deny-pur">You refused the proposal to take over Kalos. You and your rival make a vow to take down Team
+        <p id="deny-pur">You refused the proposal to take over Kalos. You make a vow to take down Team
             Flare. You
             decide to chase after the grunt in Santalune Forest.</p>
         <button id="chasing">
