--- a/index.html
+++ b/index.html
@@ -328,15 +328,16 @@
                 nothing will get in his way of completing his mission of taking over Kalos.</p>
             <button id="cell-leave">Battle Lysandre</button>
 
-            <p id="lysandre-battle">After winning the battle, you and your rival disarm the device and celebrate as you
-                successfully saved Kalos from destruction and chaos, saving the world from turning into Palworld.</p>
 
-            <p id="lysandre-loose">You fall as you faliled to defeat Lysander. He suddenly pulls out a gun, and all the
-                Pokemon have turned into Pals with weapons, threatening to turn the world of Pokemon into Palworld.</p>
+            <p id="lysandre-battle">After winning the battle, you and your rival disarm the device and celebrate as you
+                successfully saved Kalos from destruction and chaos.</p>
+
+            <p id="lysandre-loose">You fall as you faliled to defeat Lysander. Him laughing he quickly goes to your
+                rival
+                and pushed her away. He activates the machine, and a beam engulffs around the Kalos region.</p>
 
             <p id="cellstay">You decided to stay in the cell, allowing Team Flare to complete their goal and take over
-                Kalos. All the technology fades away, with the world turning ancient. The Pokemon logo goes away,
-                turning into Palworld.</p>
+                Kalos.</p>
         </section>
 
     </section>
